# argo-events-bridge

./: .coverage  .env.example  Makefile  README.md  pyproject.toml
docs/: EVENT-BRIDGE-DESIGN.md  PRD-2026-TEST-K6-001.md  akuity-api-examples.md  config-reference.md  developer-quickstart.md  example-project.md  local-development.md  phase0-checklist.md  project-context.md  snow-api-contract.md
docs/ci-roadmap/: 00-INDEX.md  01-release-bundle-spec.md  02-source-plane.md  03-build-plane.md  04-supply-chain-trust.md  05-artifact-plane-registry.md  06-promotion-plane.md  07-reconciliation-admission.md  08-reviewability-hydration.md  09-tenancy-governance.md  10-observability-ledger.md
docs/kyverno-policies/: README.md  azure-pipelines.yml  kustomization.yaml
docs/platform-maturity/: platform-maturity-assessment-2026.md
docs/platform-skills-files/: 00-README.md  01-kustomize-overlay-analyzer.md  02-kyverno-policy-impact-assessor.md  03-argocd-sync-failure-triage.md  04-ado-pipeline-yaml-reviewer.md  05-eso-keyvault-secret-debugger.md  06-envoy-gateway-migration-assistant.md  07-aks-upgrade-preflight-analyzer.md  08-datadog-query-dashboard-builder.md  09-tenant-onboarding-validator.md  10-incident-timeline-reconstructor.md
docs/zero-trust-netpol/: PRD-2026-NETPOL-ZT-001.md  architecture.mermaid
src/bridge/: __init__.py  __main__.py  audit.py  config.py  health.py  lifecycle.py  logging.py  metrics.py  poller.py  stabilization.py  state.py  transitions.py
tests/: conftest.py
tests/integration/: test_lifecycle.py
tests/unit/: test_akuity_client.py  test_audit.py  (+5 more)
(+82 files in other folders)
