[project]
name = "change-bridge"
version = "0.1.0"
description = "ArgoCD (Akuity) to ServiceNow change request bridge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "redis>=5.2",
    "structlog>=24.4",
    "datadog>=0.50",
    "uvicorn>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "fakeredis>=2.26",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bridge"]

[tool.ruff]
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "C4", "PT", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.mypy]
strict = true
mypy_path = "src"
packages = ["bridge"]

[[tool.mypy.overrides]]
module = ["datadog.*", "fakeredis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=bridge --cov-report=term-missing"

[tool.coverage.run]
source = ["src/bridge"]
